--- a/veritable-legende-azenor.html
+++ b/veritable-legende-azenor.html
@@ -5,18 +5,18 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
-  <meta name="description" content="La véritable légende d’Azénor — Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
+  <meta name="description" content="Azénor est une figure majeure de la légende bretonne médiévale. Découvrez ici la version ancienne publiée par Albert Le Grand en 1634, source historique du mythe d’Azénor.">
   <link rel="canonical" href="https://alain7544.neocities.org/veritable-legende-azenor.html">
   <meta property="og:locale" content="fr_FR">
   <meta property="og:type" content="article">
-  <meta property="og:title" content="La véritable légende d’Azénor — Le Testament d’Azénor">
+  <meta property="og:title" content="Azénor – Légende bretonne médiévale et sources anciennes">
   <meta property="og:description" content="La véritable légende d’Azénor — Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
   <meta property="og:url" content="https://alain7544.neocities.org/veritable-legende-azenor.html">
   <meta property="og:site_name" content="Le Testament d’Azénor">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="La véritable légende d’Azénor — Le Testament d’Azénor">
+  <meta name="twitter:title" content="Azénor – Légende bretonne médiévale">
   <meta name="twitter:description" content="La véritable légende d’Azénor — Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
-<title>La véritable légende d’Azénor — Le Testament d’Azénor</title>
+<title>Azénor – Légende bretonne médiévale et sources anciennes</title>
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
 <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400&700&amp&family=Inter:wght@300&400&500&amp&display=swap" rel="stylesheet"/>
@@ -315,7 +315,15 @@ main{
 </header>
 <main>
 <div class="legende-wrap">
-<h1 class="titre-principal">La véritable légende d’Azénor</h1>
+<h1 class="titre-principal">Azénor : la légende bretonne médiévale</h1>
+
+<p style="max-width:800px;margin:0 auto 2em auto;text-align:center;font-size:1.05em;">
+Azénor est une figure emblématique de la tradition bretonne médiévale.
+La version ci-dessous est extraite des <em>Vies des Saints de la Bretagne Armorique</em>
+publiées par Albert Le Grand en 1634.
+Ce texte ancien constitue l’une des principales sources historiques de la légende d’Azénor.
+</p>
+
 <div class="titre-centre titre-majeur">Albert LE GRAND</div>
 <div class="titre-centre titre-majeur">Les Vies des Saints de la Bretagne Armorique – 1634</div>
 <div class="titre-centre titre-majeur">Réédition en 1901 chez J. SALAUN.</div>
@@ -393,6 +401,16 @@ main{
 <p>En elle consiste la force &amp; la vigueur de l’âme, sa vraye joye, son singulier conten­ tement, &amp; la où elle trouve une retraitte asseurée dans le fort de ses adversitez .</p>
 <p>C’est le champ que Dieu comble de bénédictions, le Temple sanctifié du vray Salomon, le jardin clos &amp; scellé ou l’âme s’entretient &amp; se recrée spirituellement avec son Dieu, l’Arche d’Alliance, le Reclinatoire doré de la Sagesse Eternelle, la salle nuptiale de F Agneau sans macule, le Palais Royal du Saint-Esprit, la conservatrice de la Religion, le livre clos &amp; scellé durant cette vie, qui doit estre tout de grand ouvert le jour du Jugement, en face des Anges et des hommes, à la honte &amp; confusion des mechans, mais à la Gloire Eternelle des Justes .</p>
 <p>En saint Budoc nous admirerons &amp; adorerons tout ensemble les jugemens incompré­ hensibles &amp; les voyes investigables par lesquelles la Divine Providence conduit ses Eleus à la fin pour laquelle elle les a créés ; les menant par les chemins raboteux de la tribulation pour les mettre dans le droit sentier qui conduit à la Bien-heureuse félicité ; les consolant en ce pénible &amp; périlleux voyage de l’esperance de la possession du Royaume des Cieux ; honorant leurs travaux &amp; souffrances d’une riche moisson de mérités &amp; de prodigieux Miracles, &amp; enfin les Couronnant de la glorieuse guirlande dans le Ciel avec saint Budoc &amp; tous les Bien-heureux .</p>
+
+<hr style="margin:3em 0;border:0;border-top:1px solid rgba(255,255,255,0.2);">
+
+<p style="text-align:center;font-size:0.95em;opacity:0.9;">
+La figure d’Azénor continue d’inspirer la création contemporaine.
+Elle est notamment au cœur du roman
+<a href="index.html" style="color:#f28c28;">Le Testament d’Azénor</a>,
+qui propose une relecture fictionnelle du contexte breton du VIe siècle.
+</p>
+
 </div>
 </main>
 <footer class="site-footer">
