--- a/azenor.html
+++ b/azenor.html
@@ -6,14 +6,16 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
   <meta name="description" content="Azénor — Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
-  <link rel="canonical" href="https://alain7544.neocities.org/azenor.html">
-  <link rel="alternate" hreflang="fr" href="https://alain7544.neocities.org/azenor.html">
-  <link rel="alternate" hreflang="en" href="https://alain7544.neocities.org/en/azenor.html">
+ <link rel="canonical" href="https://azenor.org/azenor.html">
+
+<link rel="alternate" hreflang="fr" href="https://azenor.org/azenor.html">
+<link rel="alternate" hreflang="en" href="https://azenor.org/en/azenor.html">
+<link rel="alternate" hreflang="x-default" href="https://azenor.org/azenor.html">
   <meta property="og:locale" content="fr_FR">
   <meta property="og:type" content="article">
   <meta property="og:title" content="Azénor — Le Testament d’Azénor">
   <meta property="og:description" content="Azénor — Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
-  <meta property="og:url" content="https://alain7544.neocities.org/azenor.html">
+<meta property="og:url" content="https://azenor.org/azenor.html">
   <meta property="og:site_name" content="Le Testament d’Azénor">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Azénor — Le Testament d’Azénor">
