--- a/personnages.html
+++ b/personnages.html
@@ -6,14 +6,18 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
   <meta name="description" content="Les personnages du Testament d’Azénor : portraits et rôles dans l’univers du roman.">
-  <link rel="canonical" href="https://alain7544.neocities.org/personnages.html">
-  <link rel="alternate" hreflang="fr" href="https://alain7544.neocities.org/personnages.html">
-  <link rel="alternate" hreflang="en" href="https://alain7544.neocities.org/en/personnages.html">
+ <link rel="canonical" href="https://azenor.org/personnages.html">
+
+<link rel="alternate" hreflang="fr" href="https://azenor.org/personnages.html">
+<link rel="alternate" hreflang="en" href="https://azenor.org/en/personnages.html">
+<link rel="alternate" hreflang="x-default" href="https://azenor.org/personnages.html">
+
+<meta property="og:url" content="https://azenor.org/personnages.html">
   <meta property="og:locale" content="fr_FR">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Les personnages — Le Testament d’Azénor">
   <meta property="og:description" content="Les personnages du Testament d’Azénor : portraits et rôles dans l’univers du roman.">
-  <meta property="og:url" content="https://alain7544.neocities.org/personnages.html">
+  <meta property="og:url" content="https://azenor.org/personnages.html">
   <meta property="og:site_name" content="Le Testament d’Azénor">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Les personnages — Le Testament d’Azénor">
