--- a/personnages.html
+++ b/personnages.html
@@ -370,7 +370,12 @@ main{
 <h1>Les personnages</h1>
 <p class="intro">Les personnages du <strong>Testament d’Azénor</strong> apparaissent au fil du récit, entre histoire, légende et fiction.</p>
 <ul class="personnages-list">
-<li class="personnage"><img src="images/personnages/azenor.jpg"/><a href="azenor.html">Azénor</a></li>
+<li class="personnage">
+  <img 
+    src="/images/personnages/azenor-heroine-bretagne-vie-siecle.jpg"
+    alt="Azénor, héroïne bretonne du VIe siècle dans le roman Le Testament d’Azénor">
+  <a href="azenor.html">Azénor</a>
+</li>
 <li class="personnage"><img src="images/personnages/tadhgan.jpg"/><a href="tadhgan.html">Tadhgán</a></li>
 <li class="personnage"><img src="images/personnages/even.jpg"/><a href="even.html">Even</a></li>
 <li class="personnage"><img src="images/personnages/chunaire.jpg"/><a href="chunaire.html">Chunaire</a></li>
