--- a/en/making-off.html
+++ b/en/making-off.html
@@ -9,14 +9,14 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
   <meta name="description" content="Making-of of The Testament of Azénor: origins, research, writing process, and visuals.">
-  <link rel="canonical" href="https://alain7544.neocities.org/en/making-off.html">
-  <link rel="alternate" hreflang="fr" href="https://alain7544.neocities.org/making-off.html">
-  <link rel="alternate" hreflang="en" href="https://alain7544.neocities.org/en/making-off.html">
+  <link rel="canonical" href="https://alain7544.azenor.org/en/making-off.html">
+  <link rel="alternate" hreflang="fr" href="https://alain7544.azenor.org/making-off.html">
+  <link rel="alternate" hreflang="en" href="https://alain7544.azenor.org/en/making-off.html">
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Making of – The Testament of Azénor">
   <meta property="og:description" content="Making-of of The Testament of Azénor: origins, research, writing process, and visuals.">
-  <meta property="og:url" content="https://alain7544.neocities.org/en/making-off.html">
+  <meta property="og:url" content="https://alain7544.azenor.org/en/making-off.html">
   <meta property="og:site_name" content="Le Testament d’Azénor">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Making of – The Testament of Azénor">
@@ -65,8 +65,8 @@ a:hover { opacity: 0.9; }
 <body>
 <header class="site-header">
 <nav class="nav">
-<div class="nav-title"><a href="https://alain7544.neocities.org/">back</a></div>
-<div class="nav-lang"><a href="https://alain7544.neocities.org/">🇫🇷</a> | <a href="index.html">🇬🇧</a></div>
+<div class="nav-title"><a href="https://alain7544.azenor.org/">back</a></div>
+<div class="nav-lang"><a href="https://alain7544.azenor.org/">🇫🇷</a> | <a href="index.html">🇬🇧</a></div>
 <div class="nav-menu">
 <a href="index.html">home</a>
 <a href="personnages.html">characters</a>
