--- a/en/rights.html
+++ b/en/rights.html
@@ -9,12 +9,12 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
   <meta name="description" content="Rights &amp; translation information for The Testament of Azénor: contact and materials.">
-  <link rel="canonical" href="https://alain7544.neocities.org/en/rights.html">
+  <link rel="canonical" href="https://alain7544.azenor.org/en/rights.html">
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="article">
   <meta property="og:title" content="Rights &amp; Translation – The Testament of Azénor">
   <meta property="og:description" content="Rights &amp; translation information for The Testament of Azénor: contact and materials.">
-  <meta property="og:url" content="https://alain7544.neocities.org/en/rights.html">
+  <meta property="og:url" content="https://alain7544.azenor.org/en/rights.html">
   <meta property="og:site_name" content="Le Testament d’Azénor">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Rights &amp; Translation – The Testament of Azénor">
