--- a/en/making-offOLD.html
+++ b/en/making-offOLD.html
@@ -9,13 +9,13 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
   <meta name="description" content="Archive page from the official website of The Testament of Azénor.">
-  <link rel="canonical" href="https://alain7544.neocities.org/en/making-offOLD.html">
+  <link rel="canonical" href="https://alain7544.azenor.org/en/making-offOLD.html">
   <meta name="robots" content="noindex, nofollow">
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="article">
   <meta property="og:title" content="Making of – The Testament of Azénor | Archive">
   <meta property="og:description" content="Archive page from the official website of The Testament of Azénor.">
-  <meta property="og:url" content="https://alain7544.neocities.org/en/making-offOLD.html">
+  <meta property="og:url" content="https://alain7544.azenor.org/en/making-offOLD.html">
   <meta property="og:site_name" content="Le Testament d’Azénor">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Making of – The Testament of Azénor | Archive">
