--- a/budoc.html
+++ b/budoc.html
@@ -295,7 +295,7 @@ main{
 </div>
 <div class="extrait excerpt" style="flex:1;">
 <h2 class="character-name" style="margin-top:0;">Budoc</h2>
-<p>Chaque rocher portait un nom que Budoc apprendrait plus tard : une fois franchie l’île Logodec, Ronan prenait des alignements pour éviter les écueils que la marée lui cachait. Il fallait naviguer entre Lavredig et Roc'h Kontron, puis longer Roc'h Hir a-bell, puis Roc'h Hir a-Dost, avant d’atteindre la pointe est de Lavrec de Pen Ar Hoadic. Enfin, nous nous dirigions vers la baie formant un port naturel sur la côte est de l’île Lavrec. C’est là que le currach vint s’échouer doucement sur la grève : on était arrivé !</p>
+<p>Chaque rocher portait un nom que Budoc apprendrait plus tard : une fois franchie l’île Logodec, Ronan prenait des alignements pour éviter les écueils que la marée lui cachait. Il fallait naviguer entre Lavredig et Roc'h Kontron, puis longer Roc'h Hir a-bell, puis Roc'h Hir a-Dost, avant d’atteindre la pointe est de <a href="lavret.html" title="Lavrec — île bretonne du Testament d’Azénor">Lavrec</a> de Pen Ar Hoadic. Enfin, nous nous dirigions vers la baie formant un port naturel sur la côte est de l’île Lavrec. C’est là que le currach vint s’échouer doucement sur la grève : on était arrivé !</p>
 <p>Budoc débarqua sur l’île de Lavrec avec l’impression d’avoir enfin atteint son but, même si tout restait à bâtir. Il s’agenouilla et bénit le lieu dans un geste d’une grande simplicité. Pendant ce temps, ses compagnons s’affairaient déjà à décharger les affaires du bateau. Budoc se retourna et vit Gurwan descendre maladroitement du currach avec le coffre… Budoc se précipita pour le récupérer avant qu’il ne tombe à l’eau.</p>
 </div>
 </section>
