--- a/guenole.html
+++ b/guenole.html
@@ -295,7 +295,7 @@ main{
 </div>
 <div class="extrait excerpt">
 <h2 class="character-name">Guénolé</h2>
-<p>Tout à coup, la porte s’ouvrit brutalement, laissant entrer Tudy, essoufflé, le visage rougi par l’effort. Il s’avança rapidement vers Budoc et Guénolé, les yeux brillants d’une étrange lueur. D’une main tremblante, il leur tendit un petit objet.</p>
+<p>Tout à coup, la porte s’ouvrit brutalement, laissant entrer Tudy, essoufflé, le visage rougi par l’effort. Il s’avança rapidement vers <a href="budoc.html" title="Budoc — moine et personnage du Testament d’Azénor">Budoc</a> et Guénolé, les yeux brillants d’une étrange lueur. D’une main tremblante, il leur tendit un petit objet.</p>
 <p><em>— J’ai trouvé ceci… près du corps de Gurwan… si tu ne l’as pas découvert tout de suite, Guénolé, c’est sans doute que les marées ont fait remonter cet objet à la surface de la vase.</em></p>
 <p>Le silence se fit plus pesant encore. Guénolé contempla l’objet, blêmissant. Une pendeloque en pierre, grossièrement ciselée, reposait dans la paume de Tudy. Il n’y avait aucun doute possible.</p>
 <p><em>— Par tous les saints…, murmura-t-il.</em></p>
