--- a/bibliographie.html
+++ b/bibliographie.html
@@ -326,7 +326,9 @@ main{
 <li><strong>HERSART DE LA VILLEMARQUÉ, Théodore.</strong> <em>Le Barzaz Breizh.</em> Coop Breizh, 1997.</li>
 <li><strong>HERSART DE LA VILLEMARQUÉ, Théodore.</strong> <em>La légende celtique et la poésie des cloîtres.</em> Didier et Cie, 1864.</li>
 <li><strong>LARGILLIÈRE, René.</strong> <em>Gwenc’hlan.</em> Annales de Bretagne, t. 37, 1925.</li>
-<li><strong>LE GRAND, Albert.</strong> <em>Les Vies des Saints de la Bretagne Armorique.</em> 1634, rééd. J. Salaün, 1901.</li>
+<li><strong>LE GRAND, Albert.</strong> 
+<em><a href="veritable-legende-azenor.html" title="La véritable légende d’Azénor">Les Vies des Saints de la Bretagne Armorique</a></em>. 
+1634, rééd. J. Salaün, 1901.</li>
 <li><strong>LE MOYNE DE LA BORDERIE, Arthur.</strong> <em>Histoire de Bretagne.</em> Rennes, 1896–1914.</li>
 <li><strong>LOBINEAU, Guy Alexis.</strong> <em>Les vies des saints de Bretagne.</em> Hachette Livre, BnF, 1725.</li>
 <li><strong>LOTH, Joseph.</strong> <em>L’émigration bretonne en Armorique.</em> Rennes, 1883.</li>
