--- a/making-off.html
+++ b/making-off.html
@@ -325,7 +325,18 @@ main{
 <p>Concernant l’île de <a href="lavret.html" title="Lavret — île bretonne du Testament d’Azénor">Lavrec</a>, les <a href="http://bibliotheque-numerique-sra-bretagne.huma-num.fr/s/sra-bretagne/item?property%5B0%5D%5Bjoiner%5D=and&amp&property%5B0%5D%5Bproperty%5D=1&amp&property%5B0%5D%5Btype%5D=in&amp&property%5B0%5D%5Btext%5D=Lavret&amp&resource_template_id%5B%5D=18&amp&submit=Recherche" rel="noopener noreferrer" target="_blank">rapports de fouilles</a> de Pierre-Roland Giot, menés entre 1977 et 1983 et aujourd’hui accessibles en ligne, ont constitué une source essentielle.</p>
 <h2>Le <a href="livre-des-conquetes.html">Livre des<span>conquêtes</span> d’Irlande</a></h2>
 <p>Les textes irlandais primitifs, et notamment le <em>Lebor Gabála Érenn</em> (<a href="livre-des-conquetes.html">Livre des<span>conquêtes</span> d’Irlande</a>), qui sert de toile de fond au roman, nous sont parvenus à travers de nombreux manuscrits. S’il existe des traductions partielles en français, aucune traduction intégrale académique n’est aujourd’hui disponible.</p>
-<p>Des extraits et commentaires figurent cependant dans de nombreux travaux consacrés au monde celtique, notamment ceux de Christian-Joseph Guyonvarc’h et de Françoise Le Roux. Les traductions intégrales existantes sont en revanche accessibles en anglais, en particulier celle de R. A. Stewart Macalister.</p>
+<p>Des extraits et commentaires figurent cependant dans de nombreux travaux consacrés au monde celtique, notamment ceux de Christian-Joseph Guyonvarc’h et de Françoise Le Roux. Les traductions intégrales existantes sont en revanche accessibles en anglais, en particulier celle de R. A. Stewart Macalister.</p> 
+  <h2>Entre histoire et mythe : une liberté assumée</h2>
+
+<p>Ce roman n’est ni une thèse, ni une tentative de restitution définitive d’un VI<sup>e</sup> siècle insaisissable. Il est né d’un dialogue entre les sources et l’imaginaire. Les textes anciens — hagiographies, chroniques, légendes — ne sont pas ici traités comme des archives figées, mais comme des récits vivants, porteurs d’une mémoire et d’une vision du monde.</p>
+
+<p>Mon travail n’a pas consisté à combler les silences par des certitudes, mais à habiter ces silences. Là où les sources divergent, se contredisent ou se taisent, la fiction prend le relais. Non pour corriger l’histoire, mais pour en explorer les possibles humains : les doutes, les tensions spirituelles, les ambitions politiques, les fragilités intimes.</p>
+
+<p>Le mythe, dans cette perspective, n’est pas l’opposé de l’histoire. Il en est parfois la trace la plus durable. La légende d’Azénor, comme celle de saint Budoc ou les récits du <em>Lebor Gabála Érenn</em>, constitue moins un document qu’un horizon symbolique. C’est dans cet espace intermédiaire — entre le vraisemblable et le transmis — que le roman trouve sa place.</p>
+
+<p>J’assume donc pleinement la part de liberté qui traverse ces pages. Les personnages historiques côtoient des figures fictives ; des épisodes attestés s’entrelacent avec des scènes imaginées. L’objectif n’est pas de trancher les débats, mais de proposer une lecture sensible d’un monde en formation, où spiritualité, pouvoir et identité se redéfinissent.</p>
+
+<p>En ce sens, <em>Le Testament d’Azénor</em> est moins une reconstitution qu’une interprétation. Une manière d’interroger le passé pour éclairer des questions qui, elles, demeurent profondément contemporaines.</p>
 </main>
 <footer class="site-footer">
 <div class="footer-inner">
